--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/SchoolAbsenceMonitorUI.csproj
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/SchoolAbsenceMonitorUI.csproj
@@ -94,5 +94,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\4.JPG" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
