Added SystemEventUtils, created basic add system event method and two conditions in the login screen where it will be used. Tested functionality against the database.

--- a/AbsenceMonitor/SMAClassLibrary/SMAClassLibrary.csproj
+++ b/AbsenceMonitor/SMAClassLibrary/SMAClassLibrary.csproj
@@ -99,6 +99,7 @@
     <Compile Include="SystemEvent.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="SystemEventUtils.cs" />
     <Compile Include="SystemUser.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
