--- a/AbsenceMonitor/SMAClassLibrary/SMAClassLibrary.csproj
+++ b/AbsenceMonitor/SMAClassLibrary/SMAClassLibrary.csproj
@@ -56,6 +56,7 @@
     <Compile Include="AbsenceType.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="AbsenceTypeUtils.cs" />
     <Compile Include="AccessLevel.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -71,6 +72,7 @@
     <Compile Include="Guardian.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="GuardianUtils.cs" />
     <Compile Include="Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -91,6 +93,7 @@
     <Compile Include="PupilAttendance.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="SchoolClassUtils.cs" />
     <Compile Include="SystemEvent.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -102,6 +105,7 @@
     <Compile Include="Teacher.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="TeacherUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="SchoolAbsenceMonitorModel.edmx">
