Updated Attendance and Absence handling

--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/SchoolAbsenceMonitorUI.csproj
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/SchoolAbsenceMonitorUI.csproj
@@ -216,5 +216,8 @@
       <Name>SMAClassLibrary</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\magnifying-glass.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
